--- a/src/style.css
+++ b/src/style.css
@@ -161,37 +161,8 @@ p {
   line-height: var(--lineHeight-relaxed);
   --baseline-multiplier: 0.179;
   --x-height-multiplier: 0.35;
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
+  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
   padding: var(--spacing-0);
-}
-
-ul,
-ol {
-  margin-left: var(--spacing-0);
-  margin-right: var(--spacing-0);
-  padding: var(--spacing-0);
-  margin-bottom: var(--spacing-8);
-  list-style-position: outside;
-  list-style-image: none;
-}
-
-ul li,
-ol li {
-  padding-left: var(--spacing-0);
-  margin-bottom: calc(var(--spacing-8) / 2);
-}
-
-li > p {
-  margin-bottom: calc(var(--spacing-8) / 2);
-}
-
-li *:last-child {
-  margin-bottom: var(--spacing-0);
-}
-
-li > ul {
-  margin-left: var(--spacing-8);
-  margin-top: calc(var(--spacing-8) / 2);
 }
 
 blockquote {
@@ -273,6 +244,38 @@ a:focus {
   margin-bottom: var(--spacing-4);
 }
 
+.blog-list ul, .blog-list ol {
+  margin-left: var(--spacing-0);
+  margin-right: var(--spacing-0);
+  padding: var(--spacing-0);
+  margin-bottom: var(--spacing-8);
+  list-style-position: outside;
+  list-style-image: none;
+}
+
+.blog-list ul li {
+  padding-left: var(--spacing-0);
+  margin-bottom: calc(var(--spacing-8) / 2);
+}
+
+.blog-list ol li {
+  padding-left: var(--spacing-0);
+  margin-bottom: calc(var(--spacing-8) / 2);
+}
+
+.blog-list li > p {
+  margin-bottom: calc(var(--spacing-8) / 2);
+}
+
+.blog-list li *:last-child {
+  margin-bottom: var(--spacing-0);
+}
+
+.blog-list li > ul {
+  margin-left: var(--spacing-8);
+  margin-top: calc(var(--spacing-8) / 2);
+}
+
 .header-link-home {
   font-weight: var(--fontWeight-bold);
   font-family: var(--font-heading);
@@ -313,10 +316,6 @@ a:focus {
 .blog-post header p {
   font-size: var(--fontSize-2);
   font-family: var(--font-heading);
-}
-
-.blog-post-nav ul {
-  margin: var(--spacing-0);
 }
 
 .pagination ul {
@@ -362,7 +361,7 @@ a:focus {
 }
 
 .table-of-contents > ul > li:first-child {
-  margin-top: 10px;
+  margin-top: 0.1rem;
 }
 
 .table-of-contents li {
@@ -378,6 +377,10 @@ a:focus {
 .table-of-contents li li li {
   font-size: 0.875rem;
   margin-left: 1rem;
+}
+
+.table-of-contents p {
+  margin: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-0);
 }
 
 .table-of-contents .prefix {
