--- a/src/style.css
+++ b/src/style.css
@@ -244,7 +244,8 @@ a:focus {
   margin-bottom: var(--spacing-4);
 }
 
-.blog-list ul, .blog-list ol {
+.blog-list ul,
+.blog-list ol {
   margin-left: var(--spacing-0);
   margin-right: var(--spacing-0);
   padding: var(--spacing-0);
@@ -349,18 +350,15 @@ a:focus {
   background-color: rgba(248, 248, 248, 0.712);
   color: #333;
   box-sizing: border-box;
-  padding: 1rem 2rem 1rem 1rem;
-  max-width: 35rem;
   margin-right: auto;
+  border: 1px solid;
 }
 
-.table-of-contents ul {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
+.table-of-contents ol {
+  list-style: upper-roman;
 }
 
-.table-of-contents > ul > li:first-child {
+.table-of-contents > ol > li:first-child {
   margin-top: 0.1rem;
 }
 
@@ -376,7 +374,6 @@ a:focus {
 
 .table-of-contents li li li {
   font-size: 0.875rem;
-  margin-left: 1rem;
 }
 
 .table-of-contents p {
