--- a/src/normalize.css
+++ b/src/normalize.css
@@ -143,10 +143,16 @@ sup {
 
 /**
  * Remove the border on images inside links in IE 10.
+ * And make sure we don't run over our content width.
  */
 
 img {
   border-style: none;
+
+  max-width: 100%;
+  position: center;
+  display: block;
+  margin: auto;
 }
 
 /* Forms
