--- a/src/style.css
+++ b/src/style.css
@@ -356,6 +356,7 @@ a:focus {
 
 .table-of-contents ol {
   list-style: upper-roman;
+  margin-left: 1em;
 }
 
 .table-of-contents > ol > li:first-child {
